# frenzy

./: .gitignore  README.md  bzd_candidates.csv  list.smi  pyproject.toml  results.csv  seeds.smi
data/: index.faiss.bak  index.faiss.ids.bak
src/frenzy/: __init__.py  cli.py  fingerprints.py  io.py  output.py  properties.py  similarity.py
src/frenzy/corpus/: download.py  index.py
src/frenzy/generators/: corpus.py  stoned.py
tests/: test_cli.py  test_corpus_index.py  test_fingerprints.py  test_io.py  test_properties.py  test_similarity.py  test_stoned.py
tests/fixtures/: inputs.smi
