[project]
name = "frenzy"
version = "0.1.0"
description = "Generate similar compounds in the same chemical space from SMILES input"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David" }]
dependencies = [
    "rdkit>=2024.3.1",
    "selfies>=2.1.1",
    "typer>=0.12.5",
    "rich>=13.7.0",
    "pandas>=2.2.0",
    "faiss-cpu>=1.8.0",
    "requests>=2.32.0",
    "tenacity>=8.5.0",
]

[project.scripts]
frenzy = "frenzy.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frenzy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/frenzy/cli.py" = ["B008", "E501"]  # Typer requires typer.Option() in defaults; option lines are long

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]